<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.braulio.cassule.designfocus.ProfileActivity"
    >
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"/>

    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="10"
        android:title="@string/action_privacy"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"
        />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="102"
        android:title="@string/action_sign_out"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"
        />
</menu>
